# digital-audio-processing

./: .gitignore  00-start-tools.ipynb  001.ipynb  01-intro.ipynb  01-theory.ipynb  02-practices.ipynb  02-teoria.ipynb  03-analisys.ipynb  03-filtering-noise-reduction.ipynb  04-recording-audio.ipynb  04-speech-gender-detection.ipynb  05-kmeans.ipynb  05-recording-audio.ipynb  06-recording-audio.ipynb  07-mel_scale.ipynb  08-analizing-hashing.ipynb  README.md  analizing-hashing.ipynb  mel_scale.ipynb  pyproject.toml  recording-audio.ipynb  requirements.txt  wer.ipynb
audios/: features_df.pkl
src/: run.py
