[tool.poetry]
name = "digital-audio-processing"
version = "0.1.0"
description = ""
authors = ["Vitor Meriat <vitormeriat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.sound.dependencies]
llvmlite = "^0.43.0"
librosa = "^0.10.2.post1"
noisereduce = "^3.0.2"
youtube-dl = "^2021.12.17"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"
scikit-image = "^0.24.0"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
tqdm = "^4.66.5"
mir-eval = "^0.7"



[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
